# Backgammon

./: CMakeLists.txt  README.md  main.c
Data/: ranking.txt
Data/save/: firstSave.txt  secondSave.txt  temp.txt  thirdSave.txt
assets/: aboutMe.txt  gameBoard.txt  gameSummary.txt  logo.txt  ranking.txt  saveGame.txt  selectSave.txt
headers/: aboutMe.h  dataStructures.h  endScreen.h  game.h  gameRendering.h  loadAsset.h  loadGame.h  menu.h  ncurses.h  ranking.h  saveGame.h  startscreen.h
source/: aboutMe.c  dataStructures.c  endScreen.c  game.c  gameRendering.c  loadAsset.c  loadGame.c  menu.c  ncurses.c  ranking.c  saveGame.c  startscreen.c
